# ROSEFusion

./: CMakeLists.txt  READEME.md  README.md
PST/: pst_10240_0.tiff  pst_10240_1.tiff  pst_10240_10.tiff  pst_10240_11.tiff  pst_10240_12.tiff  pst_10240_13.tiff  pst_10240_14.tiff  pst_10240_15.tiff  pst_10240_16.tiff  pst_10240_17.tiff  pst_10240_18.tiff  pst_10240_19.tiff  pst_10240_2.tiff  pst_10240_3.tiff  pst_10240_4.tiff  pst_10240_5.tiff  pst_10240_6.tiff  pst_10240_7.tiff  pst_10240_8.tiff  pst_10240_9.tiff  pst_1024_0.tiff  pst_1024_1.tiff  pst_1024_10.tiff  pst_1024_11.tiff  pst_1024_12.tiff  pst_1024_13.tiff  pst_1024_14.tiff  pst_1024_15.tiff  pst_1024_16.tiff  pst_1024_17.tiff  pst_1024_18.tiff  pst_1024_19.tiff  pst_1024_2.tiff  pst_1024_3.tiff  pst_1024_4.tiff  pst_1024_5.tiff  pst_1024_6.tiff  pst_1024_7.tiff  pst_1024_8.tiff  pst_1024_9.tiff  (+20 more)
camera_config/: FastCaMo_camera.yaml  ICL_NUIM.yaml  TUM1.yaml  TUM2.yaml  TUM3.yaml  example_camera.yaml
controller_config/: controller.yaml  controller_terminal.yaml
dataset_config/ICL_NUIM/: room_noise_kt0.yaml  room_noise_kt1.yaml  room_noise_kt2.yaml  room_noise_kt3.yaml
dataset_config/TUM RGBD/: fr1_desk.yaml  fr2_xyz.yaml  fr3_office.yaml
dataset_config/fastCaMo-Real/: apartment_1.yaml  apartment_2.yaml  gym.yaml  lab.yaml  lounge_1.yaml  lounge_2.yaml  meeting_room.yaml  office.yaml  stairwell.yaml  studio.yaml  workshop_1.yaml  workshop_2.yaml
include/: DataReader.h  data_types.h  rosefusion.h
seq_generation_config/: apartment_1_seq.yaml  room_noise_kt1.yaml
src/: DataReader.cpp  main.cpp  pose_estimation.cpp  rosefusion.cpp  seq_gen.cpp  surface_measurement.cpp
src/cuda/: extract_pointcloud.cu  pose_estimation.cu  surface_measurement.cu  surface_prediction_phong_shading.cu  (+1 more)
(+21 files in other folders)
